fix spacing for contact description

--- a/src/assets/sass/pages/_home.sass
+++ b/src/assets/sass/pages/_home.sass
@@ -99,6 +99,9 @@
       width: 47%
       margin: 3rem auto 3rem
 
+      @include respond(phone)
+        width: 85%
+
     &__email
       font-size: 3rem
       color: $color-grey-light-1
